--- a/.github/workflows/gsheet.yml
+++ b/.github/workflows/gsheet.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow that syncs markdown table with Google Sheet
+# This is a workflow that syncs markdown table with Google Sheet
 
 name: Upload
 
@@ -19,7 +19,20 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install gspread markdown2 beautifulsoup4
+    # Save files
+    - shell: bash
+      env:
+        CREDS: ${{ secrets.GOOGLE_SHEETS_API_JSON }}
+      run: |
+        echo "$CREDS" > gcred.json
+    # Update Google Sheet
     - name: Upload Google Sheet
       run: python sync.py
