--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -21,8 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install gspread markdown2 beautifulsoup4
     # Save files
     - shell: bash
       env:
