write pass to file

--- a/.github/workflows/newsletter.yml
+++ b/.github/workflows/newsletter.yml
@@ -29,6 +29,7 @@ jobs:
         PASS: ${{ secrets.EMAIL_PASSWORD }}
       run: |
         echo "$CREDS" > gcred.json
+        echo "$PASS" > pass.txt
     # Send Email
     - name: Send Email
       run: python newsletter.py
